# Mi3-GPU

./: .gitignore  .gitmodules  IvoGPU.py  MANIFEST.in  MCMC.sh  Makefile  Mi3.py  NewtonSteps.py  README.md  UserGuide.md  changeGauge.py  clErrors.h  compile.sh  dld_mwc64x.sh  eqp.py  example_bimarg_pc.npy  example_pbs.sh  gibbs.cl  gpuSetup.c  gpuSetup.h  load.py  makeSeqFile.py  makeSeqfile.c  mcmc.cl  mcmcCPU_pc.py  mcmcCPUbin.c  mcmcCPUgen.c  mcmcCPUgenThreaded.c  mcmcGPU.c  mcmcGPU.py  mcmcGPU_pc.py  mcmcSGPU.py  metropolis.cl  metropolisGlobal.cl  metropolisLocal.cl  mpi_manager.py  node_manager.py  pseudocount.py  pyproject.toml  seqload.py  (+4 more)
example/HIV_inference/: pbs.sh
example/SH3_preprocess/: pre_process.sh
examples/HIV_inference/: pbs.sh
examples/SH3_preprocess/: pre_process.sh
extras/: AlignMSA.vim  Makefile  mcmcCPUgenThreaded.c  msa.vim
loopmc8/: mcmcGPU_pcC.py  metropolisS.cl
mi3gpu/: Mi3.py  NewtonSteps.py  mcmc.cl  mcmcGPU.py  mpi_manager.py  node_manager.py
mi3gpu/mwc64x/: README.txt
mi3gpu/utils/: __init__.py  alphabet_reduction.py  analyze_gpu_profiling.py  apply_alphamap.py  changeGauge.py  exploreParam.py  getMarginals.py  getSeqEnergies.py  getXij.py  ijscores.py  mi3_run_cleanup.py  phyloWeights.py  seqload.py  (+6 more)
utils/: Makefile  __init__.py  alphabet_reduction.py  analyze_gpu_profiling.py  apply_alphamap.py  changeGauge.py  exploreParam.py  getMarginals.py  getSeqBimarg.py  getSeqEnergies.py  getXij.py  phyloWeights.py  potts_common.py  pre_regularize.py  pseudocount.py  seqload.py  seqtools.c  setup_seqtools.py  subsample_MSA.py
(+11 files in other folders)
